objects/copado__Artifact_Version__c.object
<CustomObject>
    <fields>
        <fullName>copado__Artifact__c</fullName>
        <label>Artifact</label>
        <referenceTo>copado__Artifact__c</referenceTo>
        <relationshipLabel>Artifact Versions</relationshipLabel>
        <relationshipName>Artifact_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Release_Status__c</fullName>
        <formula>TEXT(copado__Release__r.copado__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Artifact Versions</relationshipLabel>
        <relationshipName>Artifact_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Version__c</fullName>
        <formula>copado__Release__r.copado__Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__View_In_Git__c</fullName>
        <formula>HYPERLINK(IF(AND(NOT(ISNULL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c )), copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c != &apos;&apos;), copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Tag_Base_URL__c +  copado__Version__c  ,&apos;&apos;), copado__Version__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View In Git</label>
        <type>Text</type>
    </fields>
    <label>Artifact Version</label>
    <nameField>
        <label>Artifact Versions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artifact Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>